@@ -90,5 +90,6 @@ inist-tools (0.9.11RC) RC; urgency=medium
   * [DEV] Correction du bug d'install de docker - ter
   * [DEV] Correction d'un bug àlc pour un ';' manquant...
   * [DEV] Correction du test de la présence de docker
+  * [DEV] Correction de l'installeur docker
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
